Results are in!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,8 @@
     <string name="allergy5">Choice 5</string>
     <string name="allergy6">Choice 6</string>
     <string name="allergy7">Choice 7</string>
-    <string name="live">You\'ll Live</string>
+    <string name="submit_button">Submit Allergies</string>
+    <string name="live">You\'ll live</string>
     <string name="die">You will die</string>
 
 </resources>
