Results are in!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Allergen Alert</string>
+    <string name="logo_text">AllergenAlert Logo</string>
     <string name="upload">Upload Photo</string>
     <string name="title">Choose your allergies:</string>
     <string name="allergy1">Choice 1</string>
@@ -12,5 +13,14 @@
     <string name="submit_button">Submit Allergies</string>
     <string name="live">You\'ll live</string>
     <string name="die">You will die</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome User1!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 
 </resources>
